--- a/vrs/templates/temp.html
+++ b/vrs/templates/temp.html
@@ -77,8 +77,8 @@
 <body>
     <div class="bill">
         <h1 class="two">Bill Summary</h1>
-        <h4 class="two">Invoice ID: 19</h4>
-        <h4 class="two">April 1, 2024, 12:39 p.m.</h4>
+        <h4 class="two">Invoice ID: 12</h4>
+        <h4 class="two">March 31, 2024, 9:10 p.m.</h4>
 
         <div class="one">
           <table width="450">
@@ -93,63 +93,21 @@
             <tbody>
           
           <tr>
-            <th align="left" class="each">Aradhana</th>
+            <th align="left" class="each">Baaghi 3</th>
             <th class="each">
                 
-                    Rent
+                    Buy
                     
             </th>
             <th class="each" align = "right">
               Rs.
-                  500.0
+                  550.0
                   
             </th>
         </tr>
           
           <tr>
-            <th align="left" class="each">Disco Dancer</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  400.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Apur Sansar</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  200.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Charulata</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  200.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">The First Omen</th>
+            <th align="left" class="each">Iron Man</th>
             <th class="each">
                 
                     Rent
@@ -158,636 +116,6 @@
             <th class="each" align = "right">
               Rs.
                   450.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Hisss</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  500.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Piku</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  200.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Billu</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  250.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Hera Pheri</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  350.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Chup Chup Ke</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  350.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Namastey London</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  350.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Housefull</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  300.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Desi Boyz</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  250.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Welcome</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  200.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Kites</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  250.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Guzaarish</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  500.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Goliyon Ki Raasleela Ram-Leela</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  300.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Badla</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  250.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Spider-Man: Homecoming</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  200.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Avengers: Infinity War</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  350.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Iron Man 2</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  500.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">The Avengers</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  300.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Bhool Bhulaiyaa 2</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  350.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Lust Stories</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  450.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Parched</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  300.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Baazaar</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  250.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Raees</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  400.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Gangs of Wasseypur - Part 2</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  350.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Te3n</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  250.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Raman Raghav 2.0</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  500.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Transformers: Rise of the Beasts</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  400.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">How to Train Your Dragon 2</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  450.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Thor: Ragnarok</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  350.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Extraction 2</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  300.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Avengers: Age of Ultron</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  350.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Baghban</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  350.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Chori Chori Chupke Chupke</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  400.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Talaash</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  400.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Mujhse Shaadi Karogi</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  400.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Main Tera Hero</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  450.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Humpty Sharma Ki Dulhania</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  300.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Badrinath Ki Dulhania</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  500.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Gully Boy</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  200.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Gangubai Kathiawadi</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  250.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Saawariya</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  200.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Barfi!</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  500.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Dil Dhadakne Do</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  300.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Ajeeb Daastaans</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  300.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">The Girl on the Train</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  500.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Ishaqzaade</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  500.0
                   
             </th>
         </tr>
@@ -797,12 +125,12 @@
           <tr class="four">
               <th align="left"class="tax">Total</th>
                 <th style="border-top:1px solid #333;"></th>
-              <th align="right"class="tax">Rs. 17400.0</th>
+              <th align="right"class="tax">Rs. 1000.0</th>
           </tr>
           <tr class="four">
             <th align="left" class="total">Tax (18%)</th>
             <th style="border-bottom:1px solid #333;"></th>
-            <th align="right" class="total" >Rs. 3132.0</th>
+            <th align="right" class="total" >Rs. 180.0</th>
         </tr>
         </tbody>
 
@@ -811,7 +139,7 @@
             <th align="left" class="last">Total price</th>
             <th>
             </th>
-            <th align="right" class="last">Rs. 20532.0</th>
+            <th align="right" class="last">Rs. 1180.0</th>
           </tr>
 
         </div>
