--- a/vrs/templates/temp.html
+++ b/vrs/templates/temp.html
@@ -77,8 +77,8 @@
 <body>
     <div class="bill">
         <h1 class="two">Bill Summary</h1>
-        <h4 class="two">Invoice ID: 12</h4>
-        <h4 class="two">March 31, 2024, 9:10 p.m.</h4>
+        <h4 class="two">Invoice ID: 25</h4>
+        <h4 class="two">April 13, 2024, 6:45 p.m.</h4>
 
         <div class="one">
           <table width="450">
@@ -93,21 +93,7 @@
             <tbody>
           
           <tr>
-            <th align="left" class="each">Baaghi 3</th>
-            <th class="each">
-                
-                    Buy
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  550.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">Iron Man</th>
+            <th align="left" class="each">Andaz Apna Apna</th>
             <th class="each">
                 
                     Rent
@@ -115,7 +101,49 @@
             </th>
             <th class="each" align = "right">
               Rs.
-                  450.0
+                  250.0
+                  
+            </th>
+        </tr>
+          
+          <tr>
+            <th align="left" class="each">No Entry</th>
+            <th class="each">
+                
+                    Buy
+                    
+            </th>
+            <th class="each" align = "right">
+              Rs.
+                  350.0
+                  
+            </th>
+        </tr>
+          
+          <tr>
+            <th align="left" class="each">The Hobbit: An Unexpected Journey</th>
+            <th class="each">
+                
+                    Rent
+                    
+            </th>
+            <th class="each" align = "right">
+              Rs.
+                  400.0
+                  
+            </th>
+        </tr>
+          
+          <tr>
+            <th align="left" class="each">The Lord of the Rings: The Two Towers</th>
+            <th class="each">
+                
+                    Rent
+                    
+            </th>
+            <th class="each" align = "right">
+              Rs.
+                  350.0
                   
             </th>
         </tr>
@@ -125,12 +153,12 @@
           <tr class="four">
               <th align="left"class="tax">Total</th>
                 <th style="border-top:1px solid #333;"></th>
-              <th align="right"class="tax">Rs. 1000.0</th>
+              <th align="right"class="tax">Rs. 1350.0</th>
           </tr>
           <tr class="four">
             <th align="left" class="total">Tax (18%)</th>
             <th style="border-bottom:1px solid #333;"></th>
-            <th align="right" class="total" >Rs. 180.0</th>
+            <th align="right" class="total" >Rs. 243.0</th>
         </tr>
         </tbody>
 
@@ -139,7 +167,7 @@
             <th align="left" class="last">Total price</th>
             <th>
             </th>
-            <th align="right" class="last">Rs. 1180.0</th>
+            <th align="right" class="last">Rs. 1593.0</th>
           </tr>
 
         </div>
