--- a/vrs/templates/temp.html
+++ b/vrs/templates/temp.html
@@ -77,8 +77,8 @@
 <body>
     <div class="bill">
         <h1 class="two">Bill Summary</h1>
-        <h4 class="two">Invoice ID: 25</h4>
-        <h4 class="two">April 13, 2024, 6:45 p.m.</h4>
+        <h4 class="two">Invoice ID: 30</h4>
+        <h4 class="two">April 15, 2024, 6:31 p.m.</h4>
 
         <div class="one">
           <table width="450">
@@ -93,21 +93,7 @@
             <tbody>
           
           <tr>
-            <th align="left" class="each">Andaz Apna Apna</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  250.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">No Entry</th>
+            <th align="left" class="each">Raanjhanaa</th>
             <th class="each">
                 
                     Buy
@@ -121,7 +107,7 @@
         </tr>
           
           <tr>
-            <th align="left" class="each">The Hobbit: An Unexpected Journey</th>
+            <th align="left" class="each">3 Idiots</th>
             <th class="each">
                 
                     Rent
@@ -129,21 +115,7 @@
             </th>
             <th class="each" align = "right">
               Rs.
-                  400.0
-                  
-            </th>
-        </tr>
-          
-          <tr>
-            <th align="left" class="each">The Lord of the Rings: The Two Towers</th>
-            <th class="each">
-                
-                    Rent
-                    
-            </th>
-            <th class="each" align = "right">
-              Rs.
-                  350.0
+                  250.0
                   
             </th>
         </tr>
@@ -153,12 +125,12 @@
           <tr class="four">
               <th align="left"class="tax">Total</th>
                 <th style="border-top:1px solid #333;"></th>
-              <th align="right"class="tax">Rs. 1350.0</th>
+              <th align="right"class="tax">Rs. 600.0</th>
           </tr>
           <tr class="four">
             <th align="left" class="total">Tax (18%)</th>
             <th style="border-bottom:1px solid #333;"></th>
-            <th align="right" class="total" >Rs. 243.0</th>
+            <th align="right" class="total" >Rs. 108.0</th>
         </tr>
         </tbody>
 
@@ -167,7 +139,7 @@
             <th align="left" class="last">Total price</th>
             <th>
             </th>
-            <th align="right" class="last">Rs. 1593.0</th>
+            <th align="right" class="last">Rs. 708.0</th>
           </tr>
 
         </div>
