--- a/vrs/templates/orderdisplay.html
+++ b/vrs/templates/orderdisplay.html
@@ -138,7 +138,7 @@ Order
                       <option value="Returned">Returned</option>
                     </select>
                     {% elif order.status == "Returned" %}
-                    <select name="status" class="form-control">
+                    <select name="status" class="form-control" disabled>
                       <option value="Returned">Returned</option>
                       <option value="Not Returned">Not Returned</option>
                     </select>
