--- a/vrs/templates/staffbase.html
+++ b/vrs/templates/staffbase.html
@@ -15,7 +15,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:rgba(0, 0, 0, 0.5);">
-        <a class="navbar-brand" href="#">VRS</a>
+        <a class="navbar-brand" href="/">VRS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
